# EmbeddedUnifiedProtocol

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/: eup_core_module.cpp  eup_core_pybind.hpp  eup_pybind.hpp  test_eup.py
examples/: README.md  commands.hpp  device.cpp  device.hpp  main.cpp
examples/rgb_led_adc/: CMakeLists.txt  README.md  commands.hpp  device.cpp  device.hpp  main.cpp  python_module.cpp  test_python.py
include/eup/: cobs.hpp  codec.hpp  command.hpp  crc16.hpp  frame.hpp  host.hpp  status.hpp  stream.hpp
src/: cobs.cpp  command.cpp  crc16.cpp  frame.cpp
tests/: test_command.cpp  test_host.cpp  test_protocol.cpp  test_stream.cpp
